# imagelab

./: Makefile  README.md  docker-compose.yml
server/: pyproject.toml
server/app/: __init__.py  config.py  main.py  models.py  noise.py  storage.py
server/app/http/: __init__.py  routes_query.py  routes_upload.py  sse.py
server/app/pipelines/: __init__.py  chunking.py  compression.py  crypto.py  fec.py  metrics.py
server/app/static_dashboard/: dashboard.css  dashboard.js  index.html
server/app/static_dashboard/libs/: chart.umd.js
server/app/static_sender/: index.html  sender.css  sender.js
server/app/static_sender/libs/: fflate.min.js  tweetnacl.min.js
tests/: conftest.py  test_aes_gcm.py  test_chunking.py  test_hamming.py  test_noise.py  test_rs.py
