[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-http-lab-server"
version = "0.1.0"
description = "HTTP-only image transmission lab server with compression, encryption, and FEC demos."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.1",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "orjson>=3.9.15",
  "cryptography>=42.0.7",
  "reedsolo>=1.7.0",
  "aiofiles>=23.2.1",
  "python-multipart>=0.0.9",
  "typing-extensions>=4.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.6"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]

[tool.setuptools]
packages = ["app"]
